Obter uma doação por ID e ajuste na verificação do cadastro de doação para avaliar compatibilidade sanguínea se uma solicitação de doação é informada.
